Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19198

"net statistics workstation" showing incorrect boot time

    XMLWordPrintable

Details

    Description

      reactos-bootcd-0.4.15-dev-6658-g88808ba-x86-gcc-lin-dbg

       Statistics since 1/1/1970 2:00 AM

       Expected : "Statistics since <ACTUAL BOOT TIME>"

      Guilty line of code: https://git.reactos.org/?p=reactos.git;a=blob;f=base/applications/network/net/cmdStatistics.c;h=d8e88a4697758e7094a8da8485610620362459ff;hb=d1f54aa5f7277ed202e048253db71d319e2db497#l40 

      Attachments

        Activity

          People

            ekohl ekohl
            KRosUser KRosUser
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: