[SRVSVC][WKSSVC][NET] Improve server and workstation statistics

- Server and Workstation services return proper boot time.
- Net formats boot time properly.

CORE-19198